--- a/.github/workflows/dev-to-main.yml
+++ b/.github/workflows/dev-to-main.yml
@@ -7,7 +7,7 @@ on:
       - completed
 
 jobs:
-  merge-and-deploy:
+  pr_merge:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
