--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -13,7 +13,7 @@
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "verbatimModuleSyntax": true,
+    "verbatimModuleSyntax": false, /* Alterado para rodar o CI/CD*/
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
