--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
 
       - name: Deploy to AWS
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.AWS_VM_USER }}@${{ secrets.AWS_VM_HOST }} << 'EOF'
+          ssh -o ServerAliveInterval=60 -o ServerAliveCountMax=10 -o StrictHostKeyChecking=no ${{ secrets.AWS_VM_USER }}@${{ secrets.AWS_VM_HOST }} << 'EOF'
             cd /home/ec2-user/Curriculo-Store/Curriculo-store.Client
             git pull origin main
             cd /home/ec2-user/Curriculo-Store
-            docker-compose -f docker-compose.prod.yml build frontend
+             timeout 600 docker-compose -f docker-compose.prod.yml build frontend || echo "Build may have timed out but continuing..."
             docker-compose -f docker-compose.prod.yml up -d frontend
           EOF
