--- a/.github/workflows/dev-to-main.yml
+++ b/.github/workflows/dev-to-main.yml
@@ -2,23 +2,24 @@ name: Merge Dev -> Main
 
 on:
   workflow_run:
-    workflows: ["FrontEnd CI"] # nome exato do seu workflow que roda na dev
-    types:
-      - completed
+    workflows: ["FrontEnd CI"]
+    types: [completed]
 
 jobs:
-  pr_merge:
+  open-pr:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_branch == 'dev' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # Merge automático da dev para main
-      - name: Merge dev into main
-        uses: devops-infra/action-pull-request@v0.6
+      - name: Create or update Pull Request from dev to main
+        uses: peter-evans/create-pull-request@v5
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: dev
-          target_branch: main
-          merge_method: merge  # pode ser merge, squash ou rebase
+          token: ${{ secrets.GITHUB_TOKEN }}
+          commit-message: "chore(ci): sync dev -> main (auto PR)"
+          branch: "auto/dev-to-main"
+          base: main
+          title: "Auto: Sync dev → main (CI passed)"
+          body: "This PR was created automatically after FrontEnd CI passed on dev. Please review before merge."
+          labels: "auto-sync"
