--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "test:unit": "jest \"<rootDir>/src/__tests__/unit\" --coverage=false --runInBand --watchAll=false",
+    "test:integration": "jest \"<rootDir>/src/__tests__/integration\" --runInBand --testTimeout=30000 --color"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
@@ -71,6 +73,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
     "babel-jest": "^30.1.2",
+    "dotenv": "^17.2.3",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
